--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -189,7 +189,7 @@
                             <div class="widget widget-collapsible">
                                 <h3 class="widget-title">
                                     <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true"
-                                       aria-controls="widget-2">
+                                       aria-controls="widget-2">سایز
 
                                     </a>
                                 </h3><!-- End .widget-title -->
