--- a/templates/_base.html
+++ b/templates/_base.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="{% static 'css/plugins/owl-carousel/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'css/plugins/magnific-popup/magnific-popup.css' %}">
     <link rel="stylesheet" href="{% static 'css/plugins/nouislider/nouislider.css' %}">
+
 {#    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"#}
 {#            integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="#}
 {#            crossorigin="anonymous" referrerpolicy="no-referrer"></script>#}
@@ -151,34 +152,34 @@
                         </form>
                     </div><!-- End .header-search -->
                     <div class="dropdown compare-dropdown">
-                        <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown"
+                        <a href="{% url 'product:compair' %}" class="dropdown-toggle" role="button"
                            aria-haspopup="true" aria-expanded="false" data-display="static" title="مقایسه محصولات"
                            aria-label="Compare Products">
                             <i class="icon-random"></i>
                         </a>
 
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <ul class="compare-products">
-
-
-                                        <li class="compare-product">
-                                            <a href="#"
-                                               class="btn-remove" title="حذف محصول"><i class="icon-close"></i></a>
-                                            <h4 class="compare-product-title"><a
-                                                    href="#"></a>
-                                            </h4>
-                                        </li>
-
-                                    </ul>
-
-
-                            <div class="compare-actions">
-                                <a href="{% url 'product:clear_compair' %}" class="action-link">حذف همه</a>
-                                <a href="{% url 'product:compair' %}"
-                                   class="btn btn-outline-primary-2"><span>مقایسه</span><i
-                                        class="icon-long-arrow-left"></i></a>
-                            </div>
-                        </div><!-- End .dropdown-menu -->
+{#                        <div class="dropdown-menu dropdown-menu-right">#}
+{#                            <ul class="compare-products">#}
+{##}
+{##}
+{#                                        <li class="compare-product">#}
+{#                                            <a href="#"#}
+{#                                               class="btn-remove" title="حذف محصول"><i class="icon-close"></i></a>#}
+{#                                            <h4 class="compare-product-title"><a#}
+{#                                                    href="#"></a>#}
+{#                                            </h4>#}
+{#                                        </li>#}
+{##}
+{#                                    </ul>#}
+{##}
+{##}
+{#                            <div class="compare-actions">#}
+{#                                <a href="{% url 'product:clear_compair' %}" class="action-link">حذف همه</a>#}
+{#                                <a href="{% url 'product:compair' %}"#}
+{#                                   class="btn btn-outline-primary-2"><span>مقایسه</span><i#}
+{#                                        class="icon-long-arrow-left"></i></a>#}
+{#                            </div>#}
+{#                        </div><!-- End .dropdown-menu -->#}
                     </div><!-- End .compare-dropdown -->
 
                     <div class="dropdown cart-dropdown">
@@ -736,6 +737,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
